# remarkable_manager

./: Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml  update-flake.yml
data/: invalid_template_new_template_level_key.json  invalid_template_new_top_level_key.json
src/: config.rs  main.rs  templates.rs
src/snapshots/: remarkable_manager__templates__test__it_should_round_trip.snap  remarkable_manager__templates__test__it_should_round_trip.snap.new  remarkable_manager__templates__test__it_should_serialize_a_valid_template.snap  remarkable_manager__templates__test__it_should_serialize_a_valid_template.snap.new
