[package]
name = "remarkable_manager"
version = "0.1.0"
authors = ["Amy Keibler <amelia.keibler@gmail.com>"]
edition = "2021"
description = "Back up the Remarkable tablet and manage custom templates"

license-file = "LICENSE"

[dependencies]
color-eyre = "0.6.2"
directories = "4.0.1"
eyre = "0.6.8"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
toml = "0.5.9"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[dev-dependencies]
insta = "1.21.1"
