[package]
name = "remarkable_manager"
version = "0.1.0"
authors = ["Amy Keibler <amelia.keibler@gmail.com>"]
edition = "2021"
description = "Back up the Remarkable tablet and manage custom templates"

license-file = "LICENSE"

[dependencies]
color-eyre = "0.6.2"
directories = "5.0.1"
eyre = "0.6.11"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.111"
toml = "0.8.8"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
insta = "1.34.0"
